examples/test/testpolicy11229.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11229
  namespace: namespace127
spec:
  podSelector:
    matchLabels:
      key23: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value36
          key14: value14
      podSelector:
        matchLabels:
          key26: value44
          key29: value37
